# odia-asr

./: README.md  main.py  pyproject.toml
app/asr/: infer.py  live_asr.py
